--- a/app/src/main/res/layout/list_news.xml
+++ b/app/src/main/res/layout/list_news.xml
@@ -23,15 +23,15 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="horizontal"
         >
+
         <ImageView
             android:id="@+id/ivArticleImage"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="2"
-            />
+            android:layout_height="match_parent"
+            android:layout_weight="2" />
 
         <LinearLayout
             android:layout_width="0dp"
@@ -40,6 +40,7 @@
             android:orientation="vertical"
             android:layout_marginStart="10dp"
             >
+
             <TextView
                 android:id="@+id/tvDescription"
                 android:layout_width="wrap_content"
@@ -47,22 +48,19 @@
                 android:maxLines="5"
                 android:text="DESCRIPTION"
                 android:textColor="@color/list_text"
-                android:textSize="15sp"
-                android:layout_weight="3"
-                />
+                android:textSize="15sp" />
+
             <TextView
                 android:id="@+id/tvPublishedAt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/list_text"
-                />
+                android:textColor="@color/list_text" />
 
             <TextView
                 android:id="@+id/tvSource"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/list_text"
-                />
+                android:textColor="@color/list_text" />
 
         </LinearLayout>
 
